Fix alignment of subtitle of FAQ page
- Center align on desktop screens
- Left align on mobile screens

--- a/assets/css/pages/faq.css
+++ b/assets/css/pages/faq.css
@@ -183,3 +183,9 @@ iframe {
 
   }
 }
+
+@media (min-width: 768px) {
+  .header p {
+    text-align: center;
+  }
+}
